# sketch-tool

./: .gitmodules  CMakeLists.txt  Makefile  README.md  img2sketch  img2sketch.cpp  img2sketch.py  install.sh  normal_map_generator  obj2nmap  obj2nmap.cpp  obj2normalmap  obj2normalmap.cpp
include/converter_lib/: Converter.hpp  ConverterFactory.hpp  FileStream.hpp  NMap2SurfacesConverter.hpp  OBJ2EdgesConverter.hpp  OBJ2EdgesConverter_Optimized.hpp  OBJ2NMapConverter.hpp  OBJ2NMapEdgesConverter.hpp  Pipeline.hpp  SVG2RoughConverter.hpp  VisibleEdgesConverter.hpp
src/: ConverterFactory.cpp  NMap2SurfacesConverter.cpp  OBJ2EdgesConverter.cpp  OBJ2EdgesConverter_Optimized.mm  OBJ2NMapConverter.cpp  OBJ2NMapEdgesConverter.cpp  SVG2RoughConverter.cpp  VisibleEdgesConverter.cpp  main.cpp
tests/: converter_tests.cpp
